Check format & modifier
Before trying an atomic test commit, check the format & modifier is compatible.
It's not clear it's a good idea yet: all we get is a FB ID. We can drmModeGetFB
it, but then we don't save an ioctl. If we cache the info, it may become out-of-date (e.g. FB deleted and re-created with another format).
Maybe we can just get the format/modifier from the library user. Need to check whether that would really improve performance though.