alloc: check FB format and modifier

Closes: https://gitlab.freedesktop.org/emersion/libliftoff/-/issues/12